# learning_rts_ecs_entt

./: .cursorrules  .gitignore  CMakeLists.txt  plan.txt
.cursor/rules/: coding-standard.mdc
data/: config.json  test_config.json
data/tests/3units/: expected.json  input.json  test.json
data/tests/ballista/: expected.json  input.json  test.json
data/tests/move_and_fight/: expected.json  input.json  test.json
docs/: coding_standard.md  coding_standard.txt  rts_example_basics.md  rts_example_sdd.md
docs/decisions/: hadware_instancing.md  serialization.md  spatial_grid.md
src/: CMakeLists.txt  main.cpp
src/components/: components.hpp
src/systems/: gameplay_system.cpp  gameplay_system.hpp  input_system.cpp  input_system.hpp  render_system.cpp  render_system.hpp  ui_system.cpp  ui_system.hpp
src/utils/: gl_loader.cpp  gl_loader.hpp  math_utils.hpp  profiler.hpp  resource_loader.cpp  resource_loader.hpp  spatial_grid.hpp  time_controller.cpp  time_controller.hpp  unit_factory.hpp  vec2.hpp  world_border_renderer.cpp  world_border_renderer.hpp
src/world/: spatial_grid.cpp  spatial_grid.hpp  unit_factory.hpp  world.cpp  world.hpp
tests/: CMakeLists.txt  json_comparator.cpp  json_comparator.hpp  main_test.cpp  regression_test_runner.cpp  regression_test_runner.hpp  regression_tests.cpp  spatial_grid_test.cpp
